try to fit the waves in a div

--- a/assets/scss/_3d-text.scss
+++ b/assets/scss/_3d-text.scss
@@ -1,4 +1,4 @@
-
+//Copyright (c) 2020 by Vadym (https://codepen.io/vadimhimself/pen/vwgKqO)
 .section{
   background-color: rgb(20,20,20);
   display: flex;
