--- a/assets/scss/_animations.scss
+++ b/assets/scss/_animations.scss
@@ -23,6 +23,7 @@
   } */
 
 /* ----- effect-box ------ */
+//Copyright (c) 2020 by Colloque Tsui (https://codepen.io/colloque/pen/bDgmx)
 .effect-box{
     text-decoration: none;
     color: white;
