--- a/waves.css
+++ b/waves.css
@@ -1,7 +1,7 @@
-/* body {
+body {
     margin: 0;
     overflow: hidden;
     display: flex;
     height: 100vh;
     background: black;
-  } */
+  }
