--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,8 +1,12 @@
-/* *, *::after, *::before {
+*, *::after, *::before {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-} */
+}
+
+body {
+    overflow-x: hidden;
+}
 
 @import url('https://fonts.googleapis.com/css?family=Raleway:400,800&display=swap');
 
