--- a/assets/scss/_waves.scss
+++ b/assets/scss/_waves.scss
@@ -1,7 +1,8 @@
-/* body {
-    margin: 0;
+canvas {
     overflow: hidden;
-    display: flex;
-    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
     background: black;
-  } */
+    z-index: -1;
+  }
