--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -13,6 +13,8 @@ body {
 @import "variables.scss";
 @import "header.scss";
 @import "links.scss";
+//Copyright (c) 2020 by Vadym (https://codepen.io/vadimhimself/pen/vwgKqO)
 @import "3d-text.scss";
+//Copyright (c) 2020 by Louis Hoebregts (https://codepen.io/Mamboleoo/pen/xxbwqmz)
 @import "waves.scss";
 @import "animations.scss";
