fix animation on socials

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -18,3 +18,4 @@ body {
 //Copyright (c) 2020 by Louis Hoebregts (https://codepen.io/Mamboleoo/pen/xxbwqmz)
 @import "waves.scss";
 @import "animations.scss";
+@import "socials.scss";
