--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -13,9 +13,21 @@ body {
 @import "variables.scss";
 @import "header.scss";
 @import "links.scss";
-//Copyright (c) 2020 by Vadym (https://codepen.io/vadimhimself/pen/vwgKqO)
-@import "3d-text.scss";
-//Copyright (c) 2020 by Louis Hoebregts (https://codepen.io/Mamboleoo/pen/xxbwqmz)
-@import "waves.scss";
 @import "animations.scss";
 @import "socials.scss";
+@import "contact.scss";
+
+//-------------//
+//Copyright (c) 2020 by Vadym (https://codepen.io/vadimhimself/pen/vwgKqO)
+@import "3d-text.scss";
+//-------------//
+
+//-------------//
+//Copyright (c) 2020 by Louis Hoebregts (https://codepen.io/Mamboleoo/pen/xxbwqmz)
+@import "waves.scss";
+//-------------//
+
+//-------------//
+//Copyright (c) 2020 by Louis Hoebregts (https://codepen.io/Mamboleoo/pen/QWbmPGZ)
+@import "blob.scss";
+//-------------//
