--- a/assets/scss/_links.scss
+++ b/assets/scss/_links.scss
@@ -10,6 +10,7 @@
 }
 
 .section__links-item{
+    visibility:hidden;
     display: inline-block;
     position: relative;
     font-family: $fontfamily;
