--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -24,7 +24,7 @@ body {
 
 //-------------//
 //Copyright (c) 2020 by Louis Hoebregts (https://codepen.io/Mamboleoo/pen/xxbwqmz)
-@import "waves.scss";
+@import "waves&blob.scss";
 //-------------//
 
 //-------------//
