--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -26,6 +26,6 @@
     1px -1px 0 rgb(255, 255, 255),
     -1px 1px 0 rgb(255, 255, 255),
      1px 1px 0 rgb(255, 255, 255);
-    /* background-color: rgba(255, 255, 255, 0.705); */
+    background-color: rgba(255, 255, 255, 0.705);
     mix-blend-mode: screen;
 }
