--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -12,10 +12,11 @@ body {
 
 @import "variables.scss";
 @import "header.scss";
-@import "links.scss";
+@import "navbar.scss";
 @import "animations.scss";
 @import "socials.scss";
 @import "contact.scss";
+@import "about.scss";
 
 //-------------//
 //Copyright (c) 2020 by Vadym (https://codepen.io/vadimhimself/pen/vwgKqO)
