--- a/assets/scss/_3d-text.scss
+++ b/assets/scss/_3d-text.scss
@@ -1,35 +1,41 @@
-//Copyright (c) 2020 by Vadym (https://codepen.io/vadimhimself/pen/vwgKqO)
+/* Copyright (c) 2020 by Vadym (https://codepen.io/vadimhimself/pen/vwgKqO)
+
+Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+
+ */
 .wrap {
-    position: absolute;
+    position: relative;
     perspective: 100px;
     text-transform: uppercase;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    border: 1px solid white;
   }
   
   .text {
+    border: 1px solid rgba(240, 240, 240, 0.7);
+    border-right: 1px solid rgba(255, 192, 203, 0.5);
+    border-bottom: 1px solid rgba(255, 192, 203, 0.5);
     font-family: 'Heebo', sans-serif;
     font-weight: 500;
     position: absolute;
     top: 0;
-    left: 0;
+    left: 50%;
+    transform: translateX(-50%);
     color: black;
-    font-size: 8vw;
+    font-size: 6vw;
     font-weight: bold;
-    border: 2px solid purple;
     text-shadow:
-    -1px -1px 0 rgba(240,240,240,1),  
-    1px -1px 0 rgba(240,240,240,1),
-    -1px 1px 0 rgba(240,240,240,1),
-     1px 1px 0 rgba(240,240,240,1);
+    -1px -1px 0 rgba(240, 240, 240, 0.7),  
+    1px -1px 0 rgba(255, 192, 203, 0.5),
+    -1px 1px 0 rgba(240,240,240,0.7),
+     1px 1px 0 rgba(255, 192, 203, 0.5);
     transform-style: preserve-3d;
 
 }
 
-.text:first-child {
-    position: relative;
-    transform: translate3d(1px, 1px, 5px);
-  }
+/* .text:first-child {
+    background: rgba(255, 255, 255, 0.041);
+  } */
 
