--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -19,3 +19,10 @@
     font-weight: 800;
     color: white;
 }
+.iglo{
+    color: white;
+}
+.iglo:hover{
+    color: paleturquoise;
+    transition: 1s ease-in-out;
+}
