--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -17,6 +17,7 @@ body {
 @import "socials.scss";
 @import "contact.scss";
 @import "about.scss";
+@import "cv.scss";
 
 //-------------//
 //Copyright (c) 2020 by Vadym (https://codepen.io/vadimhimself/pen/vwgKqO)
