--- a/assets/scss/_animations.scss
+++ b/assets/scss/_animations.scss
@@ -35,6 +35,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 .effect-box{
     text-decoration: none;
     color: white;
+    padding: 1rem;
 }
 
 a.effect-box:after,
