--- a/assets/scss/_3d-text.scss
+++ b/assets/scss/_3d-text.scss
@@ -17,6 +17,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
     border: 1px solid rgba(240, 240, 240, 0.7);
     border-right: 1px solid rgba(255, 192, 203, 0.5);
     border-bottom: 1px solid rgba(255, 192, 203, 0.5);
+    border-radius: 30%;
     font-family: 'Heebo', sans-serif;
     font-weight: 500;
     position: absolute;
