--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -10,6 +10,7 @@ $pastel-grey:#DBCEC0;
 $jelly-bean:rgba(234, 99, 75, 0.767);
 $light-jelly-bean:rgba(255, 197, 187, 0.747);
 $dark-jelly-bean:rgba(234, 99, 75, 0.897);
+$faded-black: rgb(20,20,20);
 
 /* -------Google Font--------- */
 $fontfamily: 'Raleway', sans-serif;
