--- a/assets/scss/_contact.scss
+++ b/assets/scss/_contact.scss
@@ -1,6 +1,7 @@
 
 .section__contact{
-    background: rgba(0, 0, 0, 0.534);
+  margin-top: 100px;
+  background: rgba(0, 0, 0, 0.534);
 }
 .home-btn{
   color: white;
