--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -1,6 +1,7 @@
 .navbar__links{
     border: 1rem solid $baby-powder;
     padding: 1rem;
+    margin-bottom: 3rem;
 }
 
 .navbar__links__item-wrapper{
