--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -25,6 +25,6 @@
     color: $baby-powder;
 }
 .iglo:hover{
-    color: #EDF5FF;
-    transition: 1s ease-in-out;
+    color: $mint;
+    transition: .3s ease;
 }
