--- a/assets/scss/_about.scss
+++ b/assets/scss/_about.scss
@@ -21,12 +21,11 @@
      1px 1px 0 $baby-powder;
     transform-style: preserve-3d;
     display: block;
-    height: 135vh;
+    height: 150vh;
     width: 80vw;
 }
 
 .main{
-    /* background: $baby-powder; */
     position: absolute;
     width: 80vw;
     top: 90%;
@@ -45,7 +44,7 @@
 .main__header{
     padding: 2rem;
     position: absolute;
-    top: 0;
+    top: 1rem;
     left: 50%;
     transform: translateX(-50%);
     text-shadow:
@@ -56,11 +55,15 @@
     transform-style: preserve-3d;
     color: $faded-black;
     font-size: 8rem;
+    width: 80vw;
+    text-align: center;
 }
 
 .main__content{
+    position: relative;
     padding: 2rem;
     font-size: 1.5rem;
+    text-align: center;
 }
 
 .main__underheader{
@@ -75,7 +78,7 @@
     justify-content: space-around;
     align-items: center;
     position: relative;
-    margin-bottom: 10rem;
+    margin-bottom: 5rem;
     border: 1px solid $baby-powder;
     padding: 4rem;
 }
@@ -88,6 +91,7 @@
     height: 20rem;
     width: 20rem;
     text-align: center;
+    position: relative;
 }
 .main__projects-item-1{
     @include main__projects-item;
@@ -142,23 +146,6 @@
     font-size: 10rem;
     animation: hand 1s ease-in-out;
     transform: rotate(-20deg);
-}
-
-.about__socials{
-    display: flex;
-    justify-content: space-around;
-    align-items: flex-end;
-}
-
-.about__social-link{
-    font-size: 8rem;
-    color: $baby-powder;
-    transition: .6s ease-in-out;
-    margin-top: 2rem;
-}
-.about__social-link:hover{
-    transform: scale(1.1);
-    color: $mint;
 }
 
 .main__spotify-container{
