--- a/assets/scss/_breakpoints.scss
+++ b/assets/scss/_breakpoints.scss
@@ -5,6 +5,15 @@
     .main{
         top: 80%;
     }
+
+    .border{
+        height: 112vh;
+        
+    }
+    
+    .main__header{
+        font-size: 8rem;
+    }
     /* Contact */
     .section__contact{
         height: 80vh;
@@ -13,7 +22,7 @@
 }
 
 /* Ipad (Landscape and Portrait */
-@media only screen and (min-width : 801px) and (max-width : 1025px) {
+@media only screen and (min-width : 813px) and (max-width : 1025px) {
     /* Navbar */
     .navbar__links-item{
         font-size: 4rem;
@@ -43,7 +52,7 @@
 }
 
 /* Smartphones (Landscape and Portrait) */
-@media only screen and (min-width : 300px) and (max-width : 800px){
+@media only screen and (min-width : 300px) and (max-width : 812px){
     
     /* Navbar */
     .navbar__links-item{
@@ -55,34 +64,55 @@
         font-size: 6rem;
     }
     /* About */
+    .border-wrapper{
+        margin-top: 0vh;
+    }
+    .border{
+        height: 185vh;
+    }
     .main{
-        top: 100%;
+        top: 120%;
     }
     .main__header{
         font-size: 4rem;
     }
+    .main__underheader{
+        font-size: 2rem;
+    }
     .main__content{
         font-size: 1rem;
-    }
-    .main__projects-container{
-        margin-bottom: 80vh;
+        top: 5vh;
+        margin-bottom: 2rem;
     }
     .main__projects-item-1,
     .main__projects-item-2,
     .main__projects-item-3{
-        height: 15rem;
-        width: 15rem;
+        height: 5rem;
+        width: 10rem;
         margin: 1rem;
-        font-size: 20px;
+        left: -11vw;
+        background: none;
     }
     .main__projects-item-img{
         font-size: 1rem;
+        color: $baby-powder;
+        width: 12rem;
+        height: 5rem;
+        display: block;
     }
     .main__projects-item-img-leopard{
         font-size: 1rem;
+        width: 12rem;
+        height: 5rem;
+        display: block;
     }
     .about__social-link{
         font-size: 3rem;
+        margin-top: 5rem;
+    }
+    iframe{
+        height: 100px;
+        width: 80px;
     }
     /* Contact */
     .section__contact{
