--- a/assets/scss/_breakpoints.scss
+++ b/assets/scss/_breakpoints.scss
@@ -86,7 +86,7 @@
     
     /* Navbar */
     .navbar__links-item{
-        font-size: 2rem;
+        font-size: 2.5rem;
     }
     /* Landing Page */
     
@@ -98,7 +98,7 @@
         margin-top: 0vh;
     }
     .border{
-        height: 235vh;
+        height: 230vh;
     }
     .main{
         top: 90%;
@@ -166,6 +166,9 @@
           
     }
 
+    .social-contact{
+        margin-top: -6rem;
+    }
     .social-link-contact{
         font-size: 3rem;
     }
